# flight_simulator_development

./: README.md  main.py  readme.txt  requirements-dev.txt  requirements.txt  setup.py
config/: simulation_config.yaml
core/: data_types.py  message_bus.py  simulation_orchestrator.py
dynamics/: flight_dynamics.py
interfaces/: xplane_interface.py
models/: base_aircraft.py
resources/project/EEtUlUb-dLAdf0KpMVivaUlztwA/: YECuNw8j83PaOKNVc2EcjMLmhewd.xml  YECuNw8j83PaOKNVc2EcjMLmhewp.xml  lNsMNuaya0XmzPefBWM-jJTpUvgd.xml  lNsMNuaya0XmzPefBWM-jJTpUvgp.xml  thHYLK-jo5i1UH_P8UffB_FRun8d.xml  thHYLK-jo5i1UH_P8UffB_FRun8p.xml
resources/project/HoHDHQ_WvHAAKj5aJOrvrg_vpt8/: xXlmKuOQ7YT_G1elNhbKQIUqSRMd.xml
resources/project/root/: GiiBklLgTxteCEmomM8RCvWT0nQd.xml
sim_io/: xpc_mock.py  xplane_backend.py
systems/: aerodynamics.py  instruments.py
tests/: integration_test_comunication.py  mock_flight_simulator.py  test_basic_communication.py  test_xpc_mock.py  test_xplane_connection.py
xplane_local_test/: pyproject.toml  xplaneconnect.py
xplane_local_test/xplane_sim/: __init__.py  datarefs.py  physics.py  server.py
